--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,23 @@
-import MavlinkThread
-from argparse import ArgumentParser
-
-def main():
-	parser = ArgumentParser(description=__doc__)
-	parser.add_argument("--baudrate", type=int, help="px4 port baud rate", default=115200)
-	parser.add_argument("--device", required=True, help="px4 device")
-	parser.add_argument("--source-system", dest='SOURCE_SYSTEM', type=int, default=255, help='MAVLink source system for this GCS')
-	args = parser.parse_args()
-	mavlinkThread = MavlinkThread.MavlinkThread(args.device, args.baudrate, args.SOURCE_SYSTEM)
-	mavlinkThread.start()
-	while True:
-		continue
-
-if __name__ == '__main__':
-    main()
-
+*~
+tags
+.DS_Store
+build*
+.nfs*
+share/
+__pycache__
+generator/C/
+generator/CPP11/include_v2.0
+generator/python/
+generator/message_definitions
+*.swp
+MANIFEST
+dist/
+pymavlink.egg-info/
+.pydevproject
+.project
+.ropeproject
+*.cproject
+include/
+.tags*
+include/mavlink/v1.0
+*.pyc
