--- a/wpa_supplicant.conf
+++ b/wpa_supplicant.conf
@@ -3,15 +3,15 @@ update_config=1
 country=US
 
 network={
-        ssid="TP-LINK-F0B04A"
+        ssid="TP-LINK_F0B04A"
         psk="1FF0B04A"
         key_mgmt=WPA-PSK
-        priority=1
+        priority=2
 }
 
 network={
         ssid="LakeLanXfi"
         psk="m8081akena"
         key_mgmt=WPA-PSK
-        priority=2
+        priority=1
 }
