--- a/wpa_supplicant_pdc.conf
+++ b/wpa_supplicant_pdc.conf
@@ -3,8 +3,8 @@ update_config=1
 country=US
 
 network={
-        ssid="TP-LINK_F0B04A"
-        psk="1FF0B04A"
+        ssid="TP-Link_E2EA"
+        psk="08942197"
         key_mgmt=WPA-PSK
         priority=2
 }
