--- a/wpa_supplicant_pdc.conf
+++ b/wpa_supplicant_pdc.conf
@@ -3,8 +3,8 @@ update_config=1
 country=US
 
 network={
-        ssid="TP-Link_E2EA"
-        psk="08942197"
+        ssid="TP-Link_D8E*"
+        psk="06582678"
         key_mgmt=WPA-PSK
         priority=2
 }
