--- a/wpa_supplicant_pdc.conf
+++ b/wpa_supplicant_pdc.conf
@@ -3,8 +3,15 @@ update_config=1
 country=US
 
 network={
-        ssid="TP-Link_D8E*"
-        psk="06582678"
+        ssid="TP-Link_E2EA"
+        psk="08942197"
+        key_mgmt=WPA-PSK
+        priority=3
+}
+
+network={
+        ssid="Painted DogC"
+        psk="Mashambo1234"
         key_mgmt=WPA-PSK
         priority=2
 }
