Config decimate work

--- a/wpa_supplicant_ste.conf
+++ b/wpa_supplicant_ste.conf
@@ -3,8 +3,8 @@ update_config=1
 country=US
 
 network={
-        ssid="TP-LINK_F0B04A"
-        psk="1FF0B04A"
+        ssid="TP-LINK_D8E8"
+        psk="06582678"
         key_mgmt=WPA-PSK
         priority=2
 }
